--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,11 @@
   <dimen name="text_margin">16dp</dimen>
 
 
-  <dimen name="space_medium">8dp</dimen>
+  <dimen name="spacing_xsmall">2dp</dimen>
+  <dimen name="spacing_small">4dp</dimen>
+  <dimen name="spacing_medium">8dp</dimen>
+  <dimen name="spacing_large">16dp</dimen>
+  <dimen name="spacing_huge">32dp</dimen>
+  <dimen name="spacing_extra_huge">64dp</dimen>
+
 </resources>
