--- a/app/src/main/res/layout/activity_teams.xml
+++ b/app/src/main/res/layout/activity_teams.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".view.ScrollingActivity"
+    tools:context=".view.activity.TeamsActivity"
     >
 
   <android.support.design.widget.AppBarLayout
@@ -32,7 +32,7 @@
           android:layout_height="140dp"
           android:layout_gravity="center"
           android:fitsSystemWindows="true"
-          android:padding="@dimen/space_medium"
+          android:padding="@dimen/spacing_medium"
           android:scaleType="fitCenter"
           android:src="@drawable/euro"
           app:layout_collapseMode="parallax"
@@ -43,25 +43,15 @@
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
           android:layout_height="?attr/actionBarSize"
-          app:layout_collapseMode="pin"
-
-
-          />
-
+          app:layout_collapseMode="pin"/>
 
     </android.support.design.widget.CollapsingToolbarLayout>
+
+
   </android.support.design.widget.AppBarLayout>
 
-  <include layout="@layout/content_scrolling"/>
+  <include layout="@layout/content_teams"/>
 
-  <!--<android.support.design.widget.FloatingActionButton-->
-  <!--android:id="@+id/fab"-->
-  <!--android:layout_width="wrap_content"-->
-  <!--android:layout_height="wrap_content"-->
-  <!--android:layout_margin="@dimen/fab_margin"-->
-  <!--android:src="@android:drawable/ic_dialog_email"-->
-  <!--app:layout_anchor="@id/app_bar"-->
-  <!--app:layout_anchorGravity="bottom|end"-->
-  <!--/>-->
+
 
 </android.support.design.widget.CoordinatorLayout>
