added square codestyle and checkstyle

--- a/app/src/main/res/layout/activity_teams.xml
+++ b/app/src/main/res/layout/activity_teams.xml
@@ -43,7 +43,8 @@
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
           android:layout_height="?attr/actionBarSize"
-          app:layout_collapseMode="pin"/>
+          app:layout_collapseMode="pin"
+          />
 
     </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -51,7 +52,6 @@
   </android.support.design.widget.AppBarLayout>
 
   <include layout="@layout/content_teams"/>
-
 
 
 </android.support.design.widget.CoordinatorLayout>
