--- a/app/src/main/res/layout/content_teams.xml
+++ b/app/src/main/res/layout/content_teams.xml
@@ -9,7 +9,7 @@
     tools:context=".view.activity.TeamsActivity"
     tools:showIn="@layout/activity_teams"
     >
-  <android.support.v7.widget.RecyclerView
+  <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/list_teams"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
