--- a/app/src/main/res/layout/activity_teams.xml
+++ b/app/src/main/res/layout/activity_teams.xml
@@ -1,57 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".view.activity.TeamsActivity"
-    >
+    tools:context=".view.activity.TeamsActivity">
 
-  <com.google.android.material.appbar.AppBarLayout
-      android:id="@+id/app_bar"
-      android:layout_width="match_parent"
-      android:layout_height="@dimen/app_bar_height"
-      android:background="@drawable/background_home"
-      android:fitsSystemWindows="true"
-      android:theme="@style/AppTheme.AppBarOverlay"
-      >
-
-    <com.google.android.material.appbar.CollapsingToolbarLayout
-        android:id="@+id/toolbar_layout"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/app_bar_height"
+        android:background="@drawable/background_home"
         android:fitsSystemWindows="true"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed"
-        app:titleEnabled="false"
-        >
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-      <ImageView
-          android:layout_width="wrap_content"
-          android:layout_height="140dp"
-          android:layout_gravity="center"
-          android:fitsSystemWindows="true"
-          android:padding="@dimen/spacing_medium"
-          android:scaleType="fitCenter"
-          android:src="@drawable/euro"
-          app:layout_collapseMode="parallax"
-          app:layout_collapseParallaxMultiplier="0.19"
-          />
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:titleEnabled="false">
 
-      <androidx.appcompat.widget.Toolbar
-          android:id="@+id/toolbar"
-          android:layout_width="match_parent"
-          android:layout_height="?attr/actionBarSize"
-          app:layout_collapseMode="pin"
-          />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_gravity="center"
+                android:fitsSystemWindows="true"
+                android:padding="@dimen/spacing_medium"
+                android:scaleType="fitCenter"
+                android:src="@drawable/euro"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.19" />
 
-    </com.google.android.material.appbar.CollapsingToolbarLayout>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin" />
 
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-  </com.google.android.material.appbar.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-  <include layout="@layout/content_teams"/>
-
+    <include
+        android:id="@+id/content_teams"
+        layout="@layout/content_teams" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
