--- a/app/src/main/res/layout/team_row.xml
+++ b/app/src/main/res/layout/team_row.xml
@@ -4,42 +4,37 @@
     android:layout_width="match_parent"
     android:layout_height="132dp"
     android:background="@drawable/background_row"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
-  <ImageView
-      android:id="@+id/image_header"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      />
+    <ImageView
+        android:id="@+id/image_header"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@null" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center|start"
+        android:orientation="horizontal"
+        android:padding="16dp">
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:gravity="center|start"
-      android:orientation="horizontal"
-      android:padding="16dp"
-      >
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/image_flag"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:border_color="@android:color/white"
+            app:border_width="1dp" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/image_flag"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        app:border_color="@android:color/white"
-        app:border_width="1dp"
-        />
+        <TextView
+            android:id="@+id/label_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/label_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        />
-
-  </LinearLayout>
+    </LinearLayout>
 
 </FrameLayout>
