--- a/app/src/main/res/layout/team_row.xml
+++ b/app/src/main/res/layout/team_row.xml
@@ -23,8 +23,8 @@
             android:id="@+id/image_flag"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            app:border_color="@android:color/white"
-            app:border_width="1dp" />
+            app:civ_border_color="@android:color/white"
+            app:civ_border_width="1dp" />
 
         <TextView
             android:id="@+id/label_name"
